--- a/index.html
+++ b/index.html
@@ -97,5 +97,8 @@
 
     <!-- Angular Material Javascript now available via Google CDN; version 1.0.7 used here -->
     <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.7/angular-material.min.js"></script>
+
+
+    <script src="buttonController.js"></script>
   </body>
 </html>
