--- a/index.html
+++ b/index.html
@@ -1,23 +1,45 @@
 <html>
   <head>
-    <title>Nabin Khadka|Computer Engineer| Android | Java | Python | Dang news</title>
-    <!-- Angular Material CSS now available via Google CDN; version 1.0.7 used here -->
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.css">
-
+      <link rel="stylesheet" href="https://gitcdn.xyz/repo/angular/bower-material/master/angular-material.css">
+      <link rel="stylesheet" href="aapp.css">
   </head>
-  <body>
 
+  <body ng-app="starterApp" layout="column">
 
+    <!-- Container #1 (see wireframe) -->
+    <md-toolbar layout="row" >
+      <h1>Angular Material - Starter App</h1>
+    </md-toolbar>
 
+    <!-- Container #2 -->
+    <div flex layout="row">
+
+        <!-- Container #3 -->
+        <md-sidenav md-is-locked-open="true" class="md-whiteframe-z2">SideNav</md-sidenav>
+
+        <!-- Container #4 -->
+        <md-content flex id="content">Content</md-content>
+
+    </div>
 
 
     <!-- Angular Material Dependencies -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.js"></script>
+
+    <!-- Angular Material Javascript using GitCDN to load directly from `bower-material/master` -->
+    <script src="https://gitcdn.xyz/repo/angular/bower-material/master/angular-material.js"></script>
 
 
-    <!-- Angular Material Javascript now available via Google CDN; version 1.0.7 used here -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.7/angular-material.min.js"></script>
+
+    <script type="text/javascript">
+      angular
+          .module('starterApp', ['ngMaterial'])
+          .run(function($log){
+            $log.debug("starterApp + ngMaterial running...");
+          });
+    </script>
+
   </body>
 </html>
