--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
 <html>
   <head>
       <link rel="stylesheet" href="https://gitcdn.xyz/repo/angular/bower-material/master/angular-material.css">
-      <link rel="stylesheet" href="aapp.css">
+      <link rel="stylesheet" href="app.css">
+    <!-- Angular Material Dependencies -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.js"></script>
+
+    <!-- Angular Material Javascript using GitCDN to load directly from `bower-material/master` -->
+    <script src="https://gitcdn.xyz/repo/angular/bower-material/master/angular-material.js"></script>
+
+
+
+    <script type="text/javascript">
+      angular
+          .module('starterApp', ['ngMaterial'])
+          .run(function($log){
+            $log.debug("starterApp + ngMaterial running...");
+          });
+    </script>
+
   </head>
 
   <body ng-app="starterApp" layout="column">
@@ -21,25 +39,6 @@
         <md-content flex id="content">Content</md-content>
 
     </div>
-
-
-    <!-- Angular Material Dependencies -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.js"></script>
-
-    <!-- Angular Material Javascript using GitCDN to load directly from `bower-material/master` -->
-    <script src="https://gitcdn.xyz/repo/angular/bower-material/master/angular-material.js"></script>
-
-
-
-    <script type="text/javascript">
-      angular
-          .module('starterApp', ['ngMaterial'])
-          .run(function($log){
-            $log.debug("starterApp + ngMaterial running...");
-          });
-    </script>
 
   </body>
 </html>
