Added more commands

--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <html>
   <head>
+    <title>nabin console</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <!-- <meta http-equiv="refresh" content="1"> -->
   </head>
   <body>
 
+    <div id="output-area"></div>
     <span>nabin@Khadka:~$</span>
     <input id ="input-command" type="text" name="input-command" onkeypress="sendCommand(event)">
-    <div id="output-area"></div>
-
-
 
     <script type="text/javascript" src="script.js"></script>
   </body>
