--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
     <div id="output-area"></div>
     <span>nabin@Khadka:~$</span>
-    <input id ="input-command" type="text" name="input-command" onkeypress="sendCommand(event)">
+    <input id = "input-command" type="text" name="input-command" onkeypress="sendCommand(event)">
+    <input id = "optional-input">
 
     <script type="text/javascript" src="script.js"></script>
   </body>
