--- a/desktop/index.html
+++ b/desktop/index.html
@@ -14,18 +14,27 @@
 
       <script type="text/javascript" src="ext-all.js"></script>
       <script type="text/javascript" src="left-navigation.js"></script>
+      <script type="text/javascript" src="footer.js"></script>
       <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/extjs/6.0.0/ext-all.js"></script> -->
       <script type="text/javascript">
 
-        var leftNavigation = Ext.create('Personal.website.LeftNavigation',{});
+        var leftNavigation = Ext.create('Personal.website.LeftNavigation', {});
+        var footer = Ext.create('Personal.website.Footer', {});
 
          Ext.create('Ext.container.Viewport', {
             layout: 'border',
             items: [{
                 region: 'north',
-                html: '<h1 class="x-panel-header">Page Title</h1>',
+                // html: '<h1 class="x-panel-header">Page Title</h1>',
                 border: false,
-                margin: '0 0 5 0'
+                margin: '0 0 5 0',
+                items: [
+                  {
+                    xtype: 'displayfield',
+                    fieldLabel: 'Display Field',
+                    glyph: 'xf015@FontAwesome'
+                  }
+                ]
             }, {
                 region: 'west',
                 collapsible: true,
@@ -41,7 +50,10 @@
                 html: 'Information goes here',
                 split: true,
                 height: 100,
-                minHeight: 100
+                minHeight: 100,
+                items: [
+                  footer
+                ]
             }, {
                 region: 'east',
                 title: 'East Panel',
