Added title bar icon

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>nabin console</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="_include/img/myicon.ico" />
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
