--- a/dang_news.html
+++ b/dang_news.html
@@ -1,1 +1,11 @@
-Oe kalauti
+The real spirit of cricket,Nicholas Hogg
+Double trouble,Kartikeya Date
+The case for sledging,Sam Perry
+What Gayle tells us,Jon Hotten
+Double-headers don't help women's cricket anymore,Raf Nicholson
+All-time visiting XIs - Part 1,Anantha Narayanan
+How a stick became a weapon of mass destruction,Stuart Wark
+Can you get your eye in before you get in?,Scott Oliver
+Let's make run-outs mundane,Pete Langman
+When you're neutral (calm) v when you're partisan (crazy),Sankaran Krishna
+,
