--- a/dangkhabar_app_news.html
+++ b/dangkhabar_app_news.html
@@ -9,5 +9,5 @@
 {"author": "Scott Oliver", "title": "Can you get your eye in before you get in?"},
 {"author": "Pete Langman", "title": "Let's make run-outs mundane"},
 {"author": "Sankaran Krishna", "title": "When you're neutral (calm) v when you're partisan (crazy)"},
-{"author": "", "title": ""}
+{"author": "Not found", "title": "Not found"}
 ]
