--- a/dangkhabar_app_news.html
+++ b/dangkhabar_app_news.html
@@ -1,3 +1,4 @@
 [
-{"title": "\n", "author": "Yoyo"}
+{"url": "", "title": "", "image_url": "", "desc": ""},
+{"url": "", "title": "", "image_url": "", "desc": ""}
 ]
