--- a/spiders_news.html
+++ b/spiders_news.html
@@ -1,1 +1,1 @@
-["Scrapy 1.3.2 - no active project", "", "Unknown command: list", "", "Use \"scrapy\" to see available commands"]
+["dangkhabar", "nayayougbodh", "tulsipuronline"]
