--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="output-area"></div>
     <span>nabin@Khadka:~$</span>
     <input id = "input-command" type="text" name="input-command" onkeypress="sendCommand(event)">
-    <input id = "optional-input" attribute=''>
+    <input id = "optional-input" attribute='!RJd@^Hf%Cn8'>
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
