Added basic SEO tags and description content

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <html>
   <head>
-    <title>nabin console</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Personal website of Nabin Khadka </title>
+    
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="Description" content="NAbin Khadka is graduate of computer science. Nabin Khadka is studying marsters in Knowledge engineering in Pulchowk campus.  He is working as software engineer in CUDA , Logpoint.">
+<meta name="Keywords" content="nabin,nabin-khadka,pulchowk,engineer-nabin,khadka,nabin-khadka-pulchowk,nabin-khadka-computer-engineer">
+
     <link rel="shortcut icon" href="myicon.ico" />
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-
+        <div class="seo" style="color: #333333;"> <h1> Personal website of Nabin Khadka.  </h1>
+    <p> Nabin Khadka is computer science graduate. Nabin Khadka is now studying Masters in computer science in Pulchowk Campus </p>
+    </div>
     <div id="output-area"></div>
     <span>nabin@Khadka:~$</span>
     <input id = "input-command" type="text" name="input-command" onkeypress="sendCommand(event)">
