--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="Description" content="Nabin Khadka is graduate of computer science. Nabin Khadka is studying marsters in Knowledge engineering in Pulchowk campus.  He is working as software engineer in CUDA , Logpoint.">
-<meta name="Keywords" content="nabin,nabin-khadka,pulchowk,engineer-nabin,khadka,nabin-khadka-pulchowk,nabin-khadka-computer-engineer">
+<meta name="Keywords" content="nabin,nabin-khadka,pulchowk,engineer-nabin,khadka,nabin-khadka-pulchowk,nabin-khadka-computer-engineer,nabin-khadka-logopint">
 
     <link rel="shortcut icon" href="myicon.ico" />
     <link rel="stylesheet" type="text/css" href="style.css">
