--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p> Nabin Khadka is computer science graduate. Nabin Khadka is now studying Masters in computer science in Pulchowk Campus. Nabin Khadka is Computer Engineer. Nabin Khadka is from Nepal Kathmandu. Nabin Khadka Ghorahi Dang. Nabin Khadka is Web Developer, Data Scientist.</p>
     </div>
     <div>
-      <a href="https://stackoverflow.com/users/2770850/nabin" style='float: right'>
+      <a href="https://stackoverflow.com/users/2770850/nabin" style='float: right' target="_blank">
         <img src="https://stackoverflow.com/users/flair/2770850.png?theme=dark" width="208" height="58" alt="profile for Nabin at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Nabin at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
       </a>
     </div>
