--- a/download.html
+++ b/download.html
@@ -1,1 +1,3 @@
-1. Download ClipMenu for mac <a href='ClipMenu_0.4.3.dmg'> here </a>
+<ol>
+  <li>Download ClipMenu for mac <a href='ClipMenu_0.4.3.dmg'> here </a></li>
+</ol>
