--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@
     <input id = "input-command" type="text" name="input-command" onkeypress="sendCommand(event)">
     <input id = "optional-input" attribute='!RJd@^Hf%Cn8'>
     <script type="text/javascript" src="script.js"></script>
+    <div style="color: #333333;">
+     <a href='https://www.stat-counter.org/'>statcounter</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=e2d49cd5165fe5ee0347678f4166800723b0da14'></script>
+     <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/498112/t/0"></script>
+    </div>
   </body>
 </html>
