--- a/downloads.html
+++ b/downloads.html
@@ -1,3 +1,4 @@
 <ol>
   <li>Download ClipMenu for mac <a href='ClipMenu_0.4.3.dmg'> here </a></li>
+  <li>Download GoogleInputNepali for windows <a href='GoogleInputNepali.exe'> here </a></li>
 </ol>
