--- a/downloads.html
+++ b/downloads.html
@@ -1,4 +1,16 @@
+<html>
+<head>
+  <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="Description" content="Nabin Khadka is graduate of computer science. Nabin Khadka is studying Masters in Knowledge engineering in Pulchowk campus.  He is working as software engineer in CUDA , Logpoint.">
+  <meta name="Keywords" content="nabin,nabin-khadka,pulchowk,engineer-nabin,khadka,nabin-khadka-pulchowk,nabin-khadka-computer-engineer,nabin-khadka-logpoint,nabin-khadka-engineer,nabin-khadka-upwork,nabin-khadka-freelancer">
+  <link rel="shortcut icon" href="myicon.ico" />
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
 <ol>
   <li>Download ClipMenu for mac <a href='ClipMenu_0.4.3.dmg'> here </a></li>
   <li>Download GoogleInputNepali for windows <a href='GoogleInputNepali.exe'> here </a></li>
 </ol>
+</body>
+</html>
