--- a/downloads.html
+++ b/downloads.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+<h1>Personal website of Nabin Khadka</h1>
+<h2>Some rate software packages</h2>
 <ol>
   <li>Download ClipMenu for mac <a href='ClipMenu_0.4.3.dmg'> here </a></li>
   <li>Download GoogleInputNepali for windows <a href='GoogleInputNepali.exe'> here </a></li>
