--- a/downloads.html
+++ b/downloads.html
@@ -9,10 +9,12 @@
 
 <body>
 <h1>Personal website of Nabin Khadka</h1>
-<h2>Some rare software packages</h2>
+<h2>My collections</h2>
+<p>Though these are common tools/softwares, you will get hard time searching for these on the website</p>
 <ol>
   <li>Download ClipMenu for mac <a href='ClipMenu_0.4.3.dmg'> here </a></li>
   <li>Download GoogleInputNepali for windows <a href='GoogleInputNepali.exe'> here </a></li>
+  <li>Download LastPass v4.4.0 for mac (Search password easily) <a href='LastPass.app.zip'> here </a></li>
 </ol>
 </body>
 </html>
