--- a/downloads.html
+++ b/downloads.html
@@ -10,7 +10,7 @@
 <body>
 <h1>Personal website of Nabin Khadka</h1>
 <h2>My collections</h2>
-<p>Though these are common tools/softwares, you will get hard time searching for these on the website</p>
+<p>Though these are common tools/softwares, you will get hard time searching for these on the internet</p>
 <ol>
   <li>Download ClipMenu for mac <a href='ClipMenu_0.4.3.dmg'> here </a></li>
   <li>Download GoogleInputNepali for windows <a href='GoogleInputNepali.exe'> here </a></li>
