--- a/downloads.html
+++ b/downloads.html
@@ -12,9 +12,10 @@
 <h2>My collections</h2>
 <p>Though these are common tools/softwares, you will get hard time searching for these on the internet</p>
 <ol>
-  <li>Download ClipMenu for mac <a href='ClipMenu_0.4.3.dmg'> here </a></li>
-  <li>Download GoogleInputNepali for windows <a href='GoogleInputNepali.exe'> here </a></li>
-  <li>Download LastPass v4.4.0 for mac (Search password easily) <a href='LastPass.app.zip'> here </a></li>
+  <li><a href='ClipMenu_0.4.3.dmg'>ClipMenu v0.4.3 for mac</a>: Useful tool for storing your copy clipboard history.</li>
+  <li><a href='GoogleInputNepali.exe'>GoogleInputNepali for windows</a>: Apparently it is not easily found.</li>
+  <li><a href='LastPass.app.zip'>LastPass v4.4.0 for mac</a>: Easily search password shortcut not working in newer version.</li>
+  <li><a href='TextExpander.app.zip'>TextExpander v3.4.0 for mac</a>: Create shortcut for long strings you use daily.</li>
 </ol>
 </body>
 </html>
