--- a/event.html
+++ b/event.html
@@ -4,7 +4,9 @@
     <title>Event Counter</title>
 </head>
 <body>
-    <h2></h2>
+    <div style="width:800px; margin:0 auto;">
+        centered content
+    </div>
     <script type="text/javascript">
         today=new Date();
         var cmas=new Date(2020, 0, 5);
