--- a/event.html
+++ b/event.html
@@ -2,11 +2,10 @@
 <html>
 <head>
     <title>Event Counter</title>
+    <link href="https://fonts.googleapis.com/css?family=Butterfly+Kids&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 style="display: flex;align-items: center; justify-content: center;margin-top: 20%;">
-        
-    </h1>
+    <h1 style="display: flex;align-items: center; justify-content: center;margin-top: 20%;font-family: 'Butterfly Kids', cursive;">  </h1>
     <script type="text/javascript">
         today=new Date();
         var cmas=new Date(2020, 0, 5);
