--- a/notes.html
+++ b/notes.html
@@ -1,7 +1,7 @@
 <h3>Some notes</h3>
 
 <span>Notebook header</span>
-<p>
+<pre>
 from IPython.core.display import display, HTML
 display(HTML("<style>.container { width:98% !important; }</style>"))
 # show multipleoutputs in one cell, not just the last one
@@ -11,4 +11,4 @@ InteractiveShell.ast_node_interactivity = "all"
 import pandas as pd
 pd.set_option('display.max_columns', 1000)
 pd.set_option('display.max_colwidth', -1)
-</p>
+</pre>
