--- a/notes.html
+++ b/notes.html
@@ -1,6 +1,7 @@
-<h3>Some notes</h3>
-
-<span>Notebook header</span>
+<h2>Useful public notes</h2>
+<ol>
+  <li>
+<strong>Notebook header</strong>
 <pre>
 from IPython.core.display import display, HTML
 display(HTML("<style>.container { width:98% !important; }</style>"))
@@ -12,3 +13,5 @@ import pandas as pd
 pd.set_option('display.max_columns', 1000)
 pd.set_option('display.max_colwidth', -1)
 </pre>
+    </li>
+</ol>
