--- a/downloads.html
+++ b/downloads.html
@@ -1,12 +1,14 @@
 <html>
-<head>
-  <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="Description" content="Nabin Khadka is graduate of computer science. Nabin Khadka is studying Masters in Knowledge engineering in Pulchowk campus.  He is working as software engineer in CUDA , Logpoint.">
-  <meta name="Keywords" content="nabin,nabin-khadka,pulchowk,engineer-nabin,khadka,nabin-khadka-pulchowk,nabin-khadka-computer-engineer,nabin-khadka-logpoint,nabin-khadka-engineer,nabin-khadka-upwork,nabin-khadka-freelancer">
-  <link rel="shortcut icon" href="myicon.ico" />
-  <link rel="stylesheet" type="text/css" href="style.css">
-</head>
+  <head>
+<title>Downloads | Personal website of Nabin Khadka </title>
+    
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="Description" content="Nabin Khadka is graduate of computer science. Nabin Khadka is studying Masters in Knowledge engineering in Pulchowk campus.  He is working as software engineer in CUDA , Logpoint.">
+<meta name="Keywords" content="nabin,nabin-khadka,pulchowk,engineer-nabin,khadka,nabin-khadka-pulchowk,nabin-khadka-computer-engineer,nabin-khadka-logpoint,nabin-khadka-engineer,nabin-khadka-upwork,nabin-khadka-freelancer">
 
+    <link rel="shortcut icon" href="myicon.ico" />
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
 <body>
 <h1>Personal website of Nabin Khadka</h1>
 <h2>My collections</h2>
