--- a/event.html
+++ b/event.html
@@ -1,9 +1,14 @@
-<!DOCTYPE html>
 <html>
-<head>
-    <title>Event Counter</title>
+  <head>
+    <title>Event Counter | Personal website of Nabin Khadka </title>
+    
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="Description" content="Nabin Khadka is graduate of computer science. Nabin Khadka is studying Masters in Knowledge engineering in Pulchowk campus.  He is working as software engineer in CUDA , Logpoint.">
+<meta name="Keywords" content="nabin,nabin-khadka,pulchowk,engineer-nabin,khadka,nabin-khadka-pulchowk,nabin-khadka-computer-engineer,nabin-khadka-logpoint,nabin-khadka-engineer,nabin-khadka-upwork,nabin-khadka-freelancer">
     <link href="https://fonts.googleapis.com/css?family=Butterfly+Kids&display=swap" rel="stylesheet">
-</head>
+    <link rel="shortcut icon" href="myicon.ico" />
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
 <body>
     <h1 style="display: flex;align-items: center; justify-content: center;margin-top: 10%;font-family: 'Butterfly Kids', cursive;  font-size: 2500%;">  </h1>
     <script type="text/javascript">
