--- a/notes.html
+++ b/notes.html
@@ -1,3 +1,16 @@
+<html>
+  <head>
+<title>Notes | Personal website of Nabin Khadka </title>
+    
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="Description" content="Nabin Khadka is graduate of computer science. Nabin Khadka is studying Masters in Knowledge engineering in Pulchowk campus.  He is working as software engineer in CUDA , Logpoint.">
+<meta name="Keywords" content="nabin,nabin-khadka,pulchowk,engineer-nabin,khadka,nabin-khadka-pulchowk,nabin-khadka-computer-engineer,nabin-khadka-logpoint,nabin-khadka-engineer,nabin-khadka-upwork,nabin-khadka-freelancer">
+
+    <link rel="shortcut icon" href="myicon.ico" />
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+  <body>
+
 <h2>Useful public notes</h2>
 <ol>
   <li>
@@ -15,3 +28,5 @@ pd.set_option('display.max_colwidth', -1)
 </pre>
     </li>
 </ol>
+<body>
+  </html>
