--- a/notes.html
+++ b/notes.html
@@ -17,7 +17,7 @@
 <strong>Notebook header</strong>
 <pre>
 from IPython.core.display import display, HTML
-display(HTML("<style>.container { width:98% !important; }</style>"))
+display(HTML("&lt;style&gt;.container { width:98% !important; }&lt;/style&gt;"))
 # show multipleoutputs in one cell, not just the last one
 from IPython.core.interactiveshell import InteractiveShell
 InteractiveShell.ast_node_interactivity = "all"
