--- a/event.html
+++ b/event.html
@@ -13,9 +13,9 @@
     <h1 style="display: flex;align-items: center; justify-content: center;margin-top: 10%;font-family: 'Butterfly Kids', cursive;  font-size: 2500%;">  </h1>
     <script type="text/javascript">
         today=new Date();
-        var cmas=new Date(2020, 0, 5);
+        var cmas=new Date(2019, 12, 29);
         var one_day=1000*60*60*24;
-        var days = Math.ceil((cmas.getTime()-today.getTime())/(one_day));
+        var days = 1*Math.ceil((cmas.getTime()-today.getTime())/(one_day));
         document.getElementsByTagName('H1')[0].innerHTML= days + ' !!';
     </script>
 </body>
