--- a/event.html
+++ b/event.html
@@ -7,7 +7,7 @@
 <meta name="Keywords" content="nabin,nabin-khadka,pulchowk,engineer-nabin,khadka,nabin-khadka-pulchowk,nabin-khadka-computer-engineer,nabin-khadka-logpoint,nabin-khadka-engineer,nabin-khadka-upwork,nabin-khadka-freelancer">
     <link href="https://fonts.googleapis.com/css?family=Butterfly+Kids&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="myicon.ico" />
-    <link rel="stylesheet" type="text/css" href="style.css">
+<!--     <link rel="stylesheet" type="text/css" href="style.css"> -->
   </head>
 <body>
     <h1 style="display: flex;align-items: center; justify-content: center;margin-top: 10%;font-family: 'Butterfly Kids', cursive;  font-size: 2000%;">  </h1>
