--- a/event.html
+++ b/event.html
@@ -7,10 +7,9 @@
 <meta name="Keywords" content="nabin,nabin-khadka,pulchowk,engineer-nabin,khadka,nabin-khadka-pulchowk,nabin-khadka-computer-engineer,nabin-khadka-logpoint,nabin-khadka-engineer,nabin-khadka-upwork,nabin-khadka-freelancer">
     <link href="https://fonts.googleapis.com/css?family=Butterfly+Kids&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="myicon.ico" />
-<!--     <link rel="stylesheet" type="text/css" href="style.css"> -->
   </head>
-<body>
-    <h1 style="display: flex;align-items: center; justify-content: center;margin-top: 10%;font-family: 'Butterfly Kids', cursive;  font-size: 2000%;">  </h1>
+<body bgcolor="#CC59A4">
+    <h1 style="display: flex;align-items: center; justify-content: center;margin-top: 10%;font-family: 'Butterfly Kids', cursive;  font-size: 2000%; color: white">  </h1>
     <script type="text/javascript">
         var today=new Date(),
             cmas=new Date(2019, 11, 29),
