--- a/notes.html
+++ b/notes.html
@@ -27,6 +27,15 @@ pd.set_option('display.max_columns', 1000)
 pd.set_option('display.max_colwidth', -1)
 </pre>
     </li>
+    <li>
+<strong>Colab cheat</strong>
+<pre>
+function KeepClicking(){
+   console.log("Clicking");
+   document.querySelector("colab-toolbar-button#connect").click()
+}setInterval(KeepClicking,60000)
+</pre>
+    </li>
 </ol>
 <body>
   </html>
