--- a/notes.html
+++ b/notes.html
@@ -36,6 +36,13 @@ function KeepClicking(){
 }setInterval(KeepClicking,60000)
 </pre>
     </li>
+  <li>
+<strong>Vim notes</strong>
+    Save with sudo
+<pre>
+!wq !sudo tee %
+</pre>
+    </li>
 </ol>
 <body>
   </html>
