--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <img src="https://stackoverflow.com/users/flair/2770850.png?theme=dark" width="208" height="58" alt="profile for Nabin at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Nabin at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
       </a>
     </div>
+    <div>
+      <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="nbnkhadka"><a class="LI-simple-link" href='https://np.linkedin.com/in/nbnkhadka?trk=profile-badge'>Nabin Khadka</a></div>
+    </div>
     <div id="output-area"></div>
     <span>nabin@Khadka:~$</span>
     <input id = "input-command" type="text" name="input-command" onkeypress="sendCommand(event)">
@@ -26,6 +29,7 @@
     <p style="visibility: hidden">
      <a href='https://www.stat-counter.org/'>statcounter</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=e2d49cd5165fe5ee0347678f4166800723b0da14'></script>
      <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/498112/t/0"></script>
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     </p>
   </body>
 </html>
