Fix place for linkedin badge

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
     <p> Nabin Khadka is computer science graduate. Nabin Khadka is now studying Masters in computer science in Pulchowk Campus. Nabin Khadka is Computer Engineer. Nabin Khadka is from Nepal Kathmandu. Nabin Khadka Ghorahi Dang. Nabin Khadka is Web Developer, Data Scientist.</p>
     </div>
     <div>
-      <a href="https://stackoverflow.com/users/2770850/nabin" style='float: right' target="_blank">
+      <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="nbnkhadka" style='float: right'>
+        <a class="LI-simple-link" href='https://np.linkedin.com/in/nbnkhadka?trk=profile-badge' target="_blank">LinkedIn Profile</a>
+        <a href="https://stackoverflow.com/users/2770850/nabin" style='float: right' target="_blank">
         <img src="https://stackoverflow.com/users/flair/2770850.png?theme=dark" width="208" height="58" alt="profile for Nabin at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Nabin at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
       </a>
+      </div>
+      
     </div>
-    <div>
-      <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="nbnkhadka"><a class="LI-simple-link" href='https://np.linkedin.com/in/nbnkhadka?trk=profile-badge'>Nabin Khadka</a></div>
-    </div>
+    
     <div id="output-area"></div>
     <span>nabin@Khadka:~$</span>
     <input id = "input-command" type="text" name="input-command" onkeypress="sendCommand(event)">
