--- a/pip.html
+++ b/pip.html
@@ -14,7 +14,7 @@
 <h2>My python package collections</h2>
 <p>Following are my python packages. Please follow the link to know how to install and use them.</p>
 <ol>
-  <li><a href='https://github.com/nabinkhadka/scrapy-rotating-free-proxies'>scrapy-rotating-free-proxies</a>: Use freely available proxies automatically for scrapy
+  <li><a href='https://github.com/nabinkhadka/rotating-free-proxies'>rotating-free-proxies</a>: Use freely available proxies automatically for scrapy
 .</li>
   <li><a href='https://github.com/nabinkhadka/readable-content'>readable-content-parser</a>: Collect actual content of any article, blog, news, etc.</li>
 </ol>
